# tic-tac-toe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BADGES_INFO.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  DOCKER_USAGE.md  Dockerfile  LICENSE  Makefile  PUBLISHING_GUIDE.md  README.md  README_OLD.md  SECURITY.md  build-local.bat  build-local.sh  codecov.yml  docker-compose.yml  pyproject.toml  release.bat  release.sh  sonar-project.properties  test-docker.bat  test-docker.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docker.yml  publish.yml
docs/: api.md
src/tictactoe/: __init__.py  ai.py  board.py  cli.py
tests/: test_ai.py  test_board.py  test_cli.py
